--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body
     font-family: 'Poppins';
     background: rgb(24, 24, 24);
 }
+body
+{
+    background-image: url("star.png");
+}
 
 body{
     overflow-x: hidden;
