--- a/style.css
+++ b/style.css
@@ -1,41 +1,17 @@
-*
+<body>
+<div class="background-image"></div>
+<body>
+<style>
 {
-    margin: 0;
+    margin:0;
     padding: 0;
 }
-
-html,
-body
+.background-image
 {
-    height: 100vh;
-    font-family: 'Poppins';
-    background-image: url("star.webp");
+    background-image: url('./Star.webp);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 200px;
+    height:100vh;
 }
-
-body{
-    overflow-x: hidden;
-}
-
-.webgl
-{
-    position: absolute;
-    top: 0;
-    left: 0;
-    outline: none;
-    mix-blend-mode: exclusion;
-}
-
-.container {
-    height: 100vh;
-    display: grid;
-    place-items:center;
-}
-
-h1 {
-    font-size: 8rem;
-    text-tranform: uppercase;
-    color: white;
-}
-
-section {height:100vh}
-
+</style>
