--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 .background-image
 {
-    background-image: url('./Star.webp);
+    background-image: url('./Star.webp');
     background-size: contain;
     background-repeat: no-repeat;
     width: 200px;
