--- a/style.css
+++ b/style.css
@@ -1,11 +1,40 @@
-<html>
-<head>
-<style>
-body{
-   
-    background-image: url("Star.webp");
-   
+*
+{
+    margin: 0;
+    padding: 0;
 }
-</style>
-</head>
-</html>
+
+html,
+body
+{
+    height: 100vh;
+    font-family: 'Poppins';
+    background-image: url("star.webp");
+}
+
+body{
+    overflow-x: hidden;
+}
+
+.webgl
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    outline: none;
+    mix-blend-mode: exclusion;
+}
+
+.container {
+    height: 100vh;
+    display: grid;
+    place-items:center;
+}
+
+h1 {
+    font-size: 8rem;
+    text-tranform: uppercase;
+    color: white;
+}
+
+section {height:100vh}
