--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body
 {
     height: 100vh;
     font-family: 'Poppins';
-    background-image: url("star.webp");
+    background : rgb(24,24,24)
 }
 
 body{
