--- a/style.css
+++ b/style.css
@@ -9,10 +9,10 @@ body
 {
     height: 100vh;
     font-family: 'Poppins';
-    background : rgb(24,24,24)
+    background: rgb(24, 24, 24);
 }
 
-body{
+body {
     overflow-x: hidden;
 }
 
@@ -28,12 +28,12 @@ body{
 .container {
     height: 100vh;
     display: grid;
-    place-items:center;
+    place-items: center;
 }
 
 h1 {
     font-size: 8rem;
-    text-tranform: uppercase;
+    text-transform: uppercase;
     color: white;
 }
 
