--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body
 {
     height: 100vh;
     font-family: 'Poppins';
-    background-image: url("Star.webp");
+    background-image: url("Sttta.gif");
 }
 
 body {
